--- a/src/styles/_benefits.css
+++ b/src/styles/_benefits.css
@@ -130,7 +130,7 @@
 
     .benefits {
         padding-top: 78px;
-        padding-bottom: 50px;
+        padding-bottom: 0;
     }
         .benefits__navigation {
 
