--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -98,6 +98,115 @@
             }
 
 
+@media ( 1100px <= width < 1500px ) {
+
+
+    .footer {
+        /*background-color: var(--accent);*/
+        /*color: #FFFFFF;*/
+    }
+        .footer__wrap {
+
+        }
+            .footer__primary {
+                /*display: flex;*/
+                /*align-items: flex-start;*/
+                /*justify-content: space-between;*/
+                /*gap: 60px;*/
+                padding-top: 46px;
+                padding-bottom: 46px;
+            }
+                .footer__summary {
+
+                }
+                    .footer__heading {
+                        /*display: block;*/
+                        /*margin-top: 0;*/
+                        /*margin-bottom: 0;*/
+                        /*white-space: nowrap;*/
+                    }
+                    .footer__heading.title,
+                    .footer__heading .title {
+                        font-size: 40px;
+                        line-height: 53px;
+                    }
+
+                    .footer__slogan {
+                        margin-top: 1px;
+                        /*font-weight: 500;*/
+                    }
+
+                    .footer__contacts {
+                        margin-top: 92px;
+                        /*display: flex;*/
+                        /*align-items: flex-start;*/
+                        /*gap: 48px;*/
+                    }
+                        .footer__channel {
+
+                        }
+                            .footer__param {
+                                /*font-family: var(--evolventa);*/
+                                /*font-weight: bold;*/
+                                font-size: 24px;
+                                line-height: 32px;
+                            }
+
+                            .footer__value {
+                                margin-top: 0px;
+                            }
+
+                            @media (min-width: 360px) and (max-width: 374px) {
+                                .footer__value {
+                                    /*font-size: 15px;*/
+                                }
+                            }
+
+                .footer__feedbacks {
+                    margin-top: 0;
+                    /*max-width: 595px;*/
+                    /*padding: 20px;*/
+                    /*background-color: #5CA9E4;*/
+                    /*border-radius: 10px;*/
+                    /*flex-grow: 1;*/
+                    /*flex-shrink: 0;*/
+                }
+
+            .footer__secondary {
+                /*border-top: 2px solid #FFFFFF;*/
+                padding-top: 36px;
+                /*padding-bottom: 32px;*/
+                /*display: flex;*/
+                /*align-items: flex-start;*/
+                /*flex-wrap: wrap;*/
+            }
+                .footer__emblem {
+
+                }
+
+                .footer__menu {
+                    /*flex-grow: 1;*/
+                    /*display: flex;*/
+                    /*align-items: flex-start;*/
+                    /*justify-content: flex-end;*/
+                    /*gap: 34px;*/
+                }
+                    .footer__link {
+                        /*display: inline-block;*/
+                        /*vertical-align: top;*/
+                        /*color: inherit;*/
+                        /*text-decoration: none;*/
+                    }
+
+                .footer__copyright {
+                    margin-top: 30px;
+                    /*width: 100%;*/
+                    /*font-size: 16px;*/
+                    /*line-height: 23px;*/
+                }
+}
+
+
 
 @media (max-width: 749px) {
 
