code style and compile

--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -153,7 +153,7 @@
                             }
 
                             .footer__value {
-                                margin-top: 0px;
+                                margin-top: 0;
                             }
 
                             @media (min-width: 360px) and (max-width: 374px) {
