--- a/src/styles/_basics.css
+++ b/src/styles/_basics.css
@@ -156,7 +156,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .basics {
         --vertical-tile-padding: 26px;
