--- a/src/styles/_feature.css
+++ b/src/styles/_feature.css
@@ -113,7 +113,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .feature {
         /*position: relative;*/
