--- a/src/styles/_benefits.css
+++ b/src/styles/_benefits.css
@@ -126,7 +126,7 @@
         }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .benefits {
         padding-top: 78px;
