--- a/src/styles/_button.css
+++ b/src/styles/_button.css
@@ -29,7 +29,7 @@
 }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
     .button {
         padding-top: 15px;
         padding-bottom: 15px;
