--- a/src/styles/_catalog.css
+++ b/src/styles/_catalog.css
@@ -44,7 +44,7 @@
             }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .catalog {
         padding-top: 60px;
