--- a/src/styles/_contact.css
+++ b/src/styles/_contact.css
@@ -46,7 +46,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .contact {
 
