--- a/src/styles/_hero.css
+++ b/src/styles/_hero.css
@@ -83,7 +83,7 @@
             }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
 
     .hero {
