--- a/src/styles/_networks.css
+++ b/src/styles/_networks.css
@@ -65,7 +65,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .networks {
         padding-top: 60px;
