--- a/src/styles/_now.css
+++ b/src/styles/_now.css
@@ -31,7 +31,7 @@
         }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
 
     .now {
