--- a/src/styles/_numbers.css
+++ b/src/styles/_numbers.css
@@ -91,7 +91,7 @@
                 }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .numbers {
         padding-bottom: 8px;
