--- a/src/styles/_sales.css
+++ b/src/styles/_sales.css
@@ -85,7 +85,7 @@
         }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .sales {
         padding-top: 60px;
