--- a/src/styles/_sharing.css
+++ b/src/styles/_sharing.css
@@ -32,7 +32,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .sharing {
         padding-top: 40px;
