--- a/src/styles/_start.css
+++ b/src/styles/_start.css
@@ -57,7 +57,7 @@
         }
 
 
-@media ( 1100px <= width < 1500px ) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
 
     .start {
         padding-top: 160px;
