--- a/src/styles/_list.css
+++ b/src/styles/_list.css
@@ -77,8 +77,7 @@
 
 
 
-@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {,
-       (max-width: 749px) {
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ), (max-width: 749px) {
 
     .list--simpler {
 
