ios catalog test fix

--- a/src/styles/_catalog.css
+++ b/src/styles/_catalog.css
@@ -12,6 +12,10 @@
 .macos .catalog {
     background-color: #038FED;
 }
+
+.ios .catalog {
+    background-color: red;
+}
     .catalog__wrap {
 
     }
