--- a/src/styles/_feature.css
+++ b/src/styles/_feature.css
@@ -38,12 +38,17 @@
         text-indent: 200%;
         white-space: nowrap;
         overflow: hidden;
-        background-image: url("../images/feature-sparkles.svg");
+        background-image: url("../images/feature-sparkles.png");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
     }
 
+    @media (min-resolution: 2dppx) {
+        .feature__sparkles {
+            background-image: url("../images/feature-sparkles@2x.png");
+        }
+    }
 
 .feature--guy {
 
